--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -11,7 +11,7 @@ Cell type mapping with SRT data refers to a set of methods which allows you to i
 
 In this tutorial, we'll take a look at two examples. First, we have two tissue sections of a [mouse brain](#mbrain) and a single cell RNA-seq dataset from the Allen Brain Atlas. In the second example, we have a [mouse kidney](#mkidney) section and single cell RNA-seq data from the Tabula Muris Senis.
 
-```{r include=FALSE}
+```{r include=FALSE, eval=FALSE}
 install.packages(url = "https://cran.r-project.org/src/contrib/RcppML_0.3.7.tar.gz", 
                  repos=NULL, type="source")
 ```
