--- a/vignettes/cell_type_mapping_with_NNLS.rmd
+++ b/vignettes/cell_type_mapping_with_NNLS.rmd
@@ -7,12 +7,12 @@ editor_options:
   chunk_output_type: inline
 ---
 
-Cell type mapping with SRT data refers to a set of methods which allows you to infer the quantity of cells from SRT expression profiles. `STUtility2` offers a quick method based on *Non-Negative Least Squares* to infer cell type proportions directly from Visium spot expression profiles. We utilize the NNLS method implemented in the [RcppML](https://github.com/zdebruine/RcppML) *v0.3.7* package available on CRAN: <https://cran.r-project.org/web/packages/RcppML/index.html>. Please ensure you have the correct version installed before proceeding with this tutorial.
+Cell type mapping with SRT data refers to a set of methods which allows you to infer the quantity of cells from SRT expression profiles. `semla` offers a quick method based on *Non-Negative Least Squares* to infer cell type proportions directly from Visium spot expression profiles. We utilize the NNLS method implemented in the [RcppML](https://github.com/zdebruine/RcppML) *v0.3.7* package available on CRAN: <https://cran.r-project.org/web/packages/RcppML/index.html>. Please ensure you have the correct version installed before proceeding with this tutorial.
 
 In this tutorial, we'll take a look at two examples. First, we have two tissue sections of a [mouse brain](#mbrain) and a single cell RNA-seq dataset from the Allen Brain Atlas. In the second example, we have a [mouse kidney](#mkidney) section and single cell RNA-seq data from the Tabula Muris Senis.
 
 ```{r, message=FALSE, warning=FALSE}
-library(STUtility2)
+library(semla)
 library(tibble)
 library(dplyr)
 if (!requireNamespace('TabulaMurisSenisData', quietly = TRUE)) {
@@ -70,7 +70,7 @@ untar(tarfile = paste0(targetdir, "/visium/S2/spatial.tar.gz"),
 file.remove(paste0(targetdir, "/visium/S2/spatial.tar.gz"))
 ```
 
-Load Visium data with STUtility2 into a Seurat object. The following steps assumes that the mouse brain 10x Visium data is located in `./mousebrain/visium/`.
+Load Visium data with semla into a Seurat object. The following steps assumes that the mouse brain 10x Visium data is located in `./mousebrain/visium/`.
 
 ```{r eval=FALSE}
 # Assemble spaceranger output files
@@ -119,6 +119,11 @@ se_allen <- se_allen |>
   FindVariableFeatures(nfeatures = 10000)
 
 ```
+
+```{r eval=FALSE, include=FALSE}
+saveRDS(se_brain_spatial, "~/10x_data/R_objects/se_brain_spatial")
+```
+
 
 ```{r include=FALSE}
 
@@ -477,7 +482,7 @@ p1 / p2
 
 <summary>**Package versions**</summary>
 
--   `STUtility2`: `r packageVersion("STUtility2")`
+-   `semla`: `r packageVersion("semla")`
 
 -   `RcppML`: `r packageVersion("RcppML")`
 
