--- a/vignettes/getting_started.rmd
+++ b/vignettes/getting_started.rmd
@@ -1,14 +1,10 @@
 ---
 title: "Get started"
-format: 
-  html:
-    toc: true
-    toc-depth: 3
-    embed-resources: true
-    theme:
-      light: flatly
-      dark: darkly
+date: "Last compiled: `r format(Sys.time(), '%d %B %Y')`"
+format: html
 editor: visual
+editor_options: 
+  chunk_output_type: inline
 ---
 
 `semla` is a toolbox for processing, analysis and visualization of spatially resolved transcriptomics data.
@@ -30,7 +26,7 @@ library(tibble)
 
 ## Load data
 
-Currently, `semla` only supports 10x Visium data. The easiest way to load data is to use the `readVisiumData` function. First, you need a couple of files output by the 10x Genomics [Space Ranger](https://support.10xgenomics.com/spatial-gene-expression/software/pipelines/latest/what-is-space-ranger) command line tool. These files are then assembled into a `data.frame`-like object with one sample per row that can be used by `readVisiumData`.
+Currently, `semla` exclusively supports 10x Visium data. The easiest way to load data is to use the `ReadVisiumData()` function. First, you need a couple of files output by the 10x Genomics [Space Ranger](https://support.10xgenomics.com/spatial-gene-expression/software/pipelines/latest/what-is-space-ranger) command line tool. These files are then assembled into a `data.frame`-like object with one sample per row that can be used by `ReadVisiumData()`.
 
 -   `samples` : file paths to expression matrices
 
@@ -43,18 +39,27 @@ Currently, `semla` only supports 10x Visium data. The easiest way to load data i
 We can also add any number of columns to our `infoTable` which will be passed as meta data columns in our `Seurat` object. This can for example be useful when you want to add clinical metadata, experimental information etc. The example data below is from two Visium data sets, one mouse brain and one mouse colon data set. Here we add a `sample_id` column describing what tissue type we have.
 
 ```{r}
-samples <- Sys.glob(paths = paste0(system.file("extdata", package = "semla"), 
-                                   "/*/filtered_feature_bc_matrix.h5"))
-imgs <- Sys.glob(paths = paste0(system.file("extdata", package = "semla"),
-                                "/*/spatial/tissue_hires_image.png"))
-spotfiles <- Sys.glob(paths = paste0(system.file("extdata", package = "semla"),
-                                     "/*/spatial/tissue_positions_list.csv"))
-json <- Sys.glob(paths = paste0(system.file("extdata", package = "semla"),
-                                "/*/spatial/scalefactors_json.json"))
+data_root_directory <- file.path(system.file("extdata", package = "semla"), "*")
 
+samples <- Sys.glob(paths = file.path(data_root_directory, 
+                                      "filtered_feature_bc_matrix.h5"))
+
+imgs <- Sys.glob(paths = file.path(data_root_directory, 
+                                   "spatial", "tissue_hires_image.png"))
+
+spotfiles <- Sys.glob(paths = file.path(data_root_directory, 
+                                        "spatial", "tissue_positions_list.csv"))
+
+json <- Sys.glob(paths = file.path(data_root_directory, 
+                                   "spatial", "scalefactors_json.json"))
+```
+
+```{r}
 infoTable <- tibble(samples, imgs, spotfiles, json, # Add required columns
                     sample_id = c("mousebrain", "mousecolon")) # Add additional column
 ```
+
+<br>
 
 Now we are ready to load the 10x Visium data into a `Seurat` object:
 
@@ -63,13 +68,19 @@ se <- ReadVisiumData(infoTable)
 se
 ```
 
-You can use most Seurat methods as long as they do not require spatial information. It's important to know that the `Seurat` R package stores spatial information (such as H&E images and coordinates) differently that `semla`, meaning that `Seurat` unctions such as `SpatialFeaturePlot` and `FindSpatiallyVariableFeatures` will not work. `semla` comes with it's own suite of tools and methods that you can learn more about in other tutorials.
+<br>
+
+You can use most Seurat methods as long as they do not require spatial information. It's important to know that the `Seurat` R package stores spatial information (such as H&E images and coordinates) differently than `semla`, meaning that `Seurat` functions such as `SpatialFeaturePlot()` and `FindSpatiallyVariableFeatures()` will *not* work. `semla` comes with it's own suite of tools and methods that you can learn more about in other tutorials.
+
+<br>
 
 If you need to access the spatial data, such as images and coordinates, you can use the `GetStaffli` function on your `Seurat` object.
 
 ```{r}
 spatial_data <- GetStaffli(se)
 ```
+
+<br>
 
 The H&E images are only loaded when `LoadImages` is called on the `Seurat` object.
 
@@ -78,6 +89,6 @@ se <- LoadImages(se)
 ImagePlot(se)
 ```
 
-This should be enough to get you started with the rest of the tutorials.
+This should be enough to get you started with the rest of the tutorials!
 
-NB: An important thing to know is that some generic functions, such as `subset` and `merge` should not be used with `semla`. Instead, use the `SubsetSTData` and `MergeSTData` functions.
+NB: An important thing to know is that some generic functions, such as `subset` and `merge` should not be used with `semla`. Instead, use the `SubsetSTData()` and `MergeSTData()` functions - See the vignette [Subset/merge](https://ludvigla.github.io/semla/articles/subset_and_merge.html).
